--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="lib/angular-ui-router.js"></script>
   <script src="app.js"></script>
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/space_terminal.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
