Add TerminalController.js, win and death states

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <script src="lib/angular.js"></script>
   <script src="lib/angular-ui-router.js"></script>
   <script src="app.js"></script>
+  <script src="controllers/TerminalController.js"></script>
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/space_terminal.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
+    <p>723.3434</p>
+    <p>EARTH.X12</p>
+    <p>REGNUM: N23432B</p>
+
     <div ui-view></div>
   </div>
 </body>
