update with KB changes

--- a/status.html
+++ b/status.html
@@ -6,6 +6,7 @@
   </p>
   <p>
     >BULKHEADS:_{{ bulkheads }}
-    >POWER:_{{ power }} >>
+    >POWER:_{{ power }}
+    >ATMO_PRESSURE:_{{ atmo_pressure }} >>
   </p>
 </div>
